Simple Textures (loading Images with DevIL)
Former-commit-id: 903549d7fd6cfa2849388009160f2286d534f30d [formerly 0a66fe6bef0766e434f3caa0b4d257f0021631c8] [formerly df5464e7dd82a01dbf4f8db47b99e53ac8f983fc [formerly df5464e7dd82a01dbf4f8db47b99e53ac8f983fc [formerly 7b616dda827ec864daf4c60c52e142c2adc34820]]]
Former-commit-id: 045d4c76ed31f3b97525d2b349fb59eaedadb197
Former-commit-id: 3329d751070f97cbcf91a7fe25eea9ef87169b4f
Former-commit-id: 2370bc495a1d01ad8a5e70a46d600883d06983c0

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,8 @@ find_package(GLEW REQUIRED) # GLEW
 
 find_package(assimp REQUIRED) # assimp
 
+find_package(DevIL REQUIRED) # DevIL
+
 IF(WIN32)
     add_definitions(-DWIN32)
 ENDIF(WIN32)
@@ -39,7 +41,7 @@ message("SHADER_FILES ${SHADER_FILES}")
 
 add_executable(${PROJECT_NAME} ${SHADER_FILES} ${SRC_LIST})
 
-include_directories(. ${SDL2_INCLUDE_DIR} ${GLEW_INCLUDE_DIR} ${ASSIMP_INCLUDE_DIR})
+include_directories(. ${SDL2_INCLUDE_DIR} ${GLEW_INCLUDE_DIR} ${ASSIMP_INCLUDE_DIR} ${DEVIL_INCLUDE_DIR})
 
 add_subdirectory(MathsTools)
 add_subdirectory(Graphics)
@@ -48,5 +50,5 @@ target_link_libraries(${PROJECT_NAME} MATHSTOOLS GRAPHICS)
 
 message(${GLEW_LIBRARY})
 
-target_link_libraries(${PROJECT_NAME} ${SDL2_LIBRARY} ${GLEW_LIBRARY} ${OPENGL_LIBRARIES} ${ASSIMP_LIBRARY})
+target_link_libraries(${PROJECT_NAME} ${SDL2_LIBRARY} ${GLEW_LIBRARY} ${OPENGL_LIBRARIES} ${ASSIMP_LIBRARY} ${DEVIL_LIBRARY})
 
