--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,33 @@ VSbuild
 /bin_environment/*.lnk
 water_0055
 Standalone
+build
+/bin_environment/brickwork_normal-map.jpg
+/bin_environment/brickwork-texture.jpg
+/bin_environment/coussin.png
+/bin_environment/coussin_color.png
+/bin_environment/coussin_norm.png
+/bin_environment/cristalite.jpg
+/bin_environment/cristalite-normal.jpg
+/bin_environment/basic_displacement_map.png
+/bin_environment/basic-geoms_norm.jpg
+/bin_environment/basic-geoms_norm.png
+/bin_environment/Standalone.zip
+/bin_environment/zob_displacement_map.png
+/bin_environment/doge_512_norm.jpg
+/bin_environment/DogeGL.exe
+/bin_environment/earthbump1k.jpg
+/bin_environment/earthmap1k.jpg
+/bin_environment/face.jpg
+/bin_environment/face_norm.jpg
+/bin_environment/gray.jpg
+/bin_environment/old-stone-wall.jpg
+/bin_environment/old-stone-wall_norm.jpg
+/bin_environment/poly_monkey.mtl
+/bin_environment/poly_monkey.obj
+/bin_environment/pure_norm.jpg
+/bin_environment/roundstones.png
+/bin_environment/roundstones_norm.png
+/bin_environment/disp_data/throbber.avi
+/bin_environment/disp_data/stars.gif
+/bin_environment/disp_data/supernova.bmp
