Loader now handles "scene graphe",
Former-commit-id: 3048c4e554e5bbbb1de6628fee12e5785ab025ff [formerly 13c2d4d8a232101e4e0084e4cd7fa5e55162ded0] [formerly efd4f7de21de3a478a1f4bbd7be0e56103c67587 [formerly df4c59b8006b987d3a0607ca5c3490a812cb9bc2 [formerly 34cf11275abfdb7330997966cef470d5c73d877b]]]
Former-commit-id: d7d97c9a184ac8d926eb58bcaefc29e49b06ce85
Former-commit-id: dc16152bcf4283b98b5a1ce1210050a8a6de4a04
Former-commit-id: b39e1e343ba390382b411dcf224bf72aee6527b6

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,7 @@ IF (MSVC)
 
 ELSE(MSVC)
 	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra") # Warnings
-        SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -fms-extensions") # features
+        SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -fms-extensions -g") # features
 ENDIF(MSVC)
 
 
@@ -37,8 +37,6 @@ file(GLOB SHADER_FILES bin_environment/*.frag bin_environment/*.vert bin_environ
 install(DIRECTORY bin_environment/ DESTINATION shaders
           FILES_MATCHING PATTERN "*.frag")
 
-message("SHADER_FILES ${SHADER_FILES}")
-
 add_executable(${PROJECT_NAME} ${SHADER_FILES} ${SRC_LIST})
 
 include_directories(. ${SDL2_INCLUDE_DIR} ${GLEW_INCLUDE_DIR} ${ASSIMP_INCLUDE_DIR} ${DEVIL_INCLUDE_DIR})
@@ -48,7 +46,7 @@ add_subdirectory(Graphics)
 
 target_link_libraries(${PROJECT_NAME} MATHSTOOLS GRAPHICS)
 
-message(${GLEW_LIBRARY})
+message("OPENGL_LIBRARIES ${OPENGL_LIBRARIES}")
 
 target_link_libraries(${PROJECT_NAME} ${SDL2_LIBRARY} ${GLEW_LIBRARY} ${OPENGL_LIBRARIES} ${ASSIMP_LIBRARY} ${DEVIL_LIBRARY})
 
