Support either Qt or SDL2 as window manager. WOUHOU FREE FLY IS BACK !
Former-commit-id: 58d8438083c0f57b84b07d2fa3de06c69e54a9bd [formerly 3c9ad43b5eaf94823d713d1ac67c8721afadbbcf] [formerly 6c524831549fca374ba5f343b498c4c80199d9cd [formerly e2f275406e9832f38ebd19f4c448bb07a5fdfa91 [formerly 8a397f81f804f743157a9eb7278b7dc091002d67]]]
Former-commit-id: 3cd5e3da30a246a53386518bb0f5e5a165ee51bf
Former-commit-id: f6c1f78365b3e1c304e05c36b3c4b8013e3e426e
Former-commit-id: d8d12db06931fff0a140592b0aa18592b637beb1

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,7 @@
 project(DogeGL)
 cmake_minimum_required(VERSION 2.8)
+cmake_policy(SET CMP0020 NEW)
+
 aux_source_directory(. SRC_LIST)
 
 #if (NOT CMAKE_BUILD_TYPE)
@@ -16,8 +18,6 @@ ELSE(MSVC)
 ENDIF(MSVC)
 
 
-find_package(SDL2 REQUIRED) # SDL2
-
 find_package(OpenGL REQUIRED) # OpenGL
 
 find_package(GLEW REQUIRED) # GLEW
@@ -31,18 +31,6 @@ IF(WIN32)
     add_definitions(-DWIN32)
 ENDIF(WIN32)
 
-IF(NOT DOGEGL_WINDOW_MANAGER)
-    set(DOGEGL_WINDOW_MANAGER QT)
-ENDIF()
-
-IF(DOGEGL_WINDOW_MANAGER STREQUAL "SDL2")
-    add_definitions(-DUSE_SDL2)
-ELSEIF(DOGEGL_WINDOW_MANAGER STREQUAL "QT")
-    add_definitions(-DUSE_QT)
-ELSE()
-    error("${DOGEGL_WINDOW_MANAGER} not available")
-ENDIF()
-
 
 file(GLOB SHADER_FILES bin_environment/*.frag bin_environment/*.vert bin_environment/*.glsl
                        bin_environment/*.tesc bin_environment/*.tese bin_environment/*.geom)
@@ -52,17 +40,54 @@ install(DIRECTORY bin_environment/ DESTINATION shaders
 
 add_executable(${PROJECT_NAME} ${SHADER_FILES} ${SRC_LIST})
 
-include_directories(. ${SDL2_INCLUDE_DIR} ${GLEW_INCLUDE_DIR} ${ASSIMP_INCLUDE_DIR} ${DEVIL_INCLUDE_DIR})
+
+IF(NOT DOGEGL_WINDOW_MANAGER)
+    set(DOGEGL_WINDOW_MANAGER QT)
+ENDIF()
+
+## TMP HACK FOR QT KEYBOARD ENUM ##
+    find_package(Qt5Core)
+    include_directories(${Qt5Core_INCLUDE_DIRS})
+## ##
+
+
+IF(DOGEGL_WINDOW_MANAGER STREQUAL "SDL2")
+    find_package(SDL2 REQUIRED) # SDL2
+
+    include_directories(${SDL2_INCLUDE_DIR})
+
+    add_definitions(-DUSE_SDL2)
+
+    add_subdirectory(Sdl2GUI)
+
+    target_link_libraries(${PROJECT_NAME} Sdl2GUI)
+
+ELSEIF(DOGEGL_WINDOW_MANAGER STREQUAL "QT")
+    find_package(Qt5Core)
+    include_directories(${Qt5Core_INCLUDE_DIRS})
+
+    add_definitions(-DUSE_QT)
+
+    add_subdirectory(QtGUI)
+
+    target_link_libraries(${PROJECT_NAME} QtGUI)
+
+
+ELSE()
+    error("DOGEGL_WINDOW_MANAGER ${DOGEGL_WINDOW_MANAGER} not available")
+ENDIF()
+
+
+
+include_directories(. ${GLEW_INCLUDE_DIR} ${ASSIMP_INCLUDE_DIR} ${DEVIL_INCLUDE_DIR})
 
 add_subdirectory(MathsTools)
 add_subdirectory(Graphics)
-add_subdirectory(QtGUI)
 
-target_link_libraries(${PROJECT_NAME} MATHSTOOLS GRAPHICS QtGUI)
+target_link_libraries(${PROJECT_NAME} MATHSTOOLS GRAPHICS)
 
-message("OPENGL_LIBRARIES ${OPENGL_LIBRARIES}")
 
-target_link_libraries(${PROJECT_NAME} ${SDL2_LIBRARY} ${GLEW_LIBRARY} ${OPENGL_LIBRARIES} ${ASSIMP_LIBRARY} ${DEVIL_LIBRARY})
+target_link_libraries(${PROJECT_NAME} ${GLEW_LIBRARY} ${OPENGL_LIBRARIES} ${ASSIMP_LIBRARY} ${DEVIL_LIBRARY})
 
 target_link_libraries(${PROJECT_NAME})
 
