--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,9 @@ cmake_minimum_required(VERSION 2.8)
 cmake_policy(SET CMP0020 NEW)
 
 aux_source_directory(. SRC_LIST)
+aux_source_directory(./Utils SRC_LIST)
+
+include_directories(.)
 
 #if (NOT CMAKE_BUILD_TYPE)
 	set(CMAKE_BUILD_TYPE Debug)
