--- a/arkQTGUI/CMakeLists.txt
+++ b/arkQTGUI/CMakeLists.txt
@@ -1,9 +1,7 @@
 SET(LIBRARY_VERSION "0.1.0")
-SET(LIBRARY_NAME "QtGUI")
+SET(LIBRARY_NAME "arkQTGUI")
 
 FILE(GLOB src *)
-
-file(GLOB_RECURSE QT_UI_FILES *.ui)
 
 # Qt
 set(CMAKE_AUTOMOC ON)
@@ -29,17 +27,14 @@ if(Qt5_POSITION_INDEPENDENT_CODE)
   set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 endif()
 
-qt5_wrap_ui(UI_HEADER_FILES ${QT_UI_FILES})
-message("QT_UI_FILES: ${QT_UI_FILES}")
-
 set(QT_USE_OPENGL TRUE)
 
 ADD_DEFINITIONS(${QT_DEFINITIONS})
 
-ADD_LIBRARY(QtGUI STATIC ${src} ${QT_UI_FILES})
+ADD_LIBRARY(${LIBRARY_NAME} STATIC ${src})
 
-target_link_libraries(QtGUI Qt5::Core Qt5::Widgets Qt5::Gui Qt5::OpenGL GRAPHICS ${OPENGL_LIBRARIES})
+target_link_libraries(${LIBRARY_NAME} Qt5::Core Qt5::Widgets Qt5::Gui Qt5::OpenGL ${OPENGL_LIBRARIES})
 
-SET_TARGET_PROPERTIES(QtGUI PROPERTIES VERSION ${LIBRARY_VERSION})
+SET_TARGET_PROPERTIES(${LIBRARY_NAME} PROPERTIES VERSION ${LIBRARY_VERSION})
 
 
