BIG CLEANUP : all ressources + dlls deleted from git repo. Now use the 2 added script : - updateRessources.sh (for ressources) - getWin32DLLs.sh (for 32bit mingw-w64 windows dlls)
Former-commit-id: a5777977e97d7398b90aa19ad5162059146dcaaf

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,9 +7,9 @@ aux_source_directory(./Utils SRC_LIST)
 
 include_directories(.)
 
-#if (NOT CMAKE_BUILD_TYPE)
+if (NOT CMAKE_BUILD_TYPE)
 	set(CMAKE_BUILD_TYPE Debug)
-#endif()
+endif()
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake_modules/")
 
